# love-space-admin/src/main/java/com/loves/space/modules/activity/dto/ActivityDetailResponse.java
@@ -14,6 +14,7 @@ public record ActivityDetailResponse(
         UUID id,
         List<ImageResponse> images,
         String title,
+        String subtitle,
         List<String> tags,
         List<String> periods,
         String level,
